Update security
